# effekseer_reader

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: debug_node.rs  dump_effect.rs  list_resources.rs  test_ff.rs
src/: error.rs  lib.rs  reader.rs  version.rs
src/eval/: dynamic_equation.rs  easing.rs  fcurve.rs  gradient.rs  mod.rs  nurbs.rs
src/parser/: alpha_cutoff.rs  collision.rs  color.rs  common_values.rs  curve.rs  depth.rs  easing.rs  effect.rs  efkefc.rs  efkpkg.rs  fcurve.rs  force_field.rs  gpu_particles.rs  gradient.rs  kill_rules.rs  material.rs  mod.rs  model.rs  node.rs  procedural_model.rs  renderer.rs  renderer_common.rs  rotation.rs  scaling.rs  sound.rs  spawn.rs  translation.rs  uv.rs
src/types/: alpha_cutoff.rs  collision.rs  color.rs  common_values.rs  curve.rs  custom_data.rs  depth.rs  dynamic_equation.rs  effect.rs  enums.rs  fcurve.rs  force_field.rs  gpu_particles.rs  gradient.rs  kill_rules.rs  material.rs  mod.rs  model.rs  node.rs  params.rs  primitives.rs  procedural_model.rs  renderer.rs  renderer_common.rs  sound.rs  uv.rs
tests/: parse_efkefc.rs  parse_efkpkg.rs  parse_material.rs  parse_model.rs  parse_node.rs
tests/test_data/: homing_laser.efkefc
