[package]
name = "effekseer_reader"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Pure Rust parser for Effekseer particle effect files (.efkefc, .efkmat, .efkmodel)"
repository = "https://github.com/bvaltu/effekseer_reader"
keywords = ["effekseer", "particles", "vfx", "gamedev", "parser"]
categories = ["game-development", "parser-implementations"]
readme = "README.md"
exclude = ["examples/debug_node.rs"]

[features]
default = []
serde = ["dep:serde", "bitflags/serde"]
eval = []

[dependencies]
thiserror = "2"
bitflags = "2"
log = "0.4"
flate2 = "1"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
env_logger = "0.11"
